--- a/front/css/home.css
+++ b/front/css/home.css
@@ -68,10 +68,10 @@ body {
 }
 
 body {
-  background-color: #fff;
   min-height: 100%;
   font: 18px/1.2 'Roboto', sans-serif;
   color: #4C4C4C;
+  background-color: #fff;
 }
 
 header {
@@ -84,34 +84,34 @@ header {
 
 footer {
   position: fixed;
-  width: 100%;
   bottom: 0;
   right: 0;
-  text-align: right;
+  width: 100%;
   padding: 10px 30px;
+  text-align: right;
 }
 footer a {
   display: inline-block;
-  color: #fff;
   margin-left: 20px;
+  color: #fff;
   font-size: 12px;
 }
 
 .page {
+  position: relative;
   width: 100%;
+  height: 100%;
+  padding: 90px 30px 50px 30px;
   background: no-repeat center center;
   background-size: cover;
-  position: relative;
-  height: 100%;
-  padding: 0 30px;
 }
 
 .logo {
+  display: inline-block;
+  margin: 20px 0;
   font-weight: bold;
   font-size: 42px;
   color: #fff;
-  display: inline-block;
-  margin: 20px 0;
 }
 
 @font-face {
@@ -282,22 +282,51 @@ footer a {
 }
 
 .slogan, .help {
+  margin: 40px 0;
   font-size: 42px;
   text-shadow: 0 0 30px #818181;
-  margin: 40px 0;
   font-weight: 300;
 }
 
 .help {
-  font-size: 20px;
   margin-bottom: 30px;
+  font-size: 20px;
 }
 
 .note {
-  font-size: 13px;
   margin-top: 30px;
+  font-size: 13px;
 }
 
 .buttons .btn {
   margin: 0 10px;
+}
+
+@media screen and (max-width: 580px) {
+  .slogan, .help {
+    margin: 20px 0;
+    font-size: 28px;
+    line-height: 1;
+  }
+
+  .help {
+    font-size: 16px;
+  }
+
+  .buttons .btn {
+    width: 100%;
+    margin: 5px 0;
+  }
+
+  .note {
+    display: none;
+  }
+
+  footer {
+    text-align: center;
+  }
+  footer a {
+    margin-left: 0;
+    font-size: 11px;
+  }
 }
