--- a/front/sass/_parts/layout.scss
+++ b/front/sass/_parts/layout.scss
@@ -5,10 +5,10 @@ body {
 }
 
 body {
-	background-color: #fff;
 	min-height: 100%;
 	font: 18px/1.2 'Roboto', sans-serif;
 	color: $textColor;
+	background-color: #fff;
 }
 
 header {
@@ -21,33 +21,33 @@ header {
 
 footer {
 	position: fixed;
-	width: 100%;
 	bottom: 0;
 	right: 0;
-	text-align: right;
+	width: 100%;
 	padding: 10px 30px;
+	text-align: right;
 
 	a {
 		display: inline-block;
-		color: #fff;
 		margin-left: 20px;
+		color: #fff;
 		font-size: 12px;
 	}
 }
 
 .page {
+  	position: relative;
 	width: 100%;
+  	height: 100%;
+  	padding: 90px 30px 50px 30px;
   	background: no-repeat center center;
   	background-size: cover;
-  	position: relative;
-  	height: 100%;
-  	padding: 0 30px;
 }
 
 .logo {
+	display: inline-block;
+	margin: 20px 0;
 	font-weight: bold;
 	font-size: 42px;
 	color: #fff;
-	display: inline-block;
-	margin: 20px 0;
 }
