--- a/front/sass/home.scss
+++ b/front/sass/home.scss
@@ -18,25 +18,59 @@
 }
 
 .slogan {
+	margin: 40px 0;
 	font-size: 42px;
 	text-shadow: 0 0 30px #818181;
-	margin: 40px 0;
 	font-weight: 300;
 }
 
 .help {
 	@extend .slogan;
+	margin-bottom: 30px;
 	font-size: 20px;
-	margin-bottom: 30px
 }
 
 .note {
-	font-size: 13px;
 	margin-top: 30px;
+	font-size: 13px;
 }
 
 .buttons {
 	.btn {
 		margin: 0 10px;
 	}
+}
+
+
+@media screen and (max-width: 580px) {
+	.slogan {
+		margin: 20px 0;
+		font-size: 28px;
+		line-height: 1;
+	}
+
+	.help {
+		font-size: 16px;
+	}
+
+	.buttons {
+		.btn {
+			width: 100%;
+			margin: 5px 0;
+		}
+	}
+
+	.note {
+		display: none;
+	}
+
+	footer {
+		text-align: center;
+
+		a {
+			margin-left: 0;
+			font-size: 11px;
+		}
+	}
+
 }
